--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,26 @@
+:root {
+    --white: #fff8f2;
+    --xlFont: 28px;
+  }
+
+
+body {
+    font-family: 'Lato', sans-serif;
+    color: #5f5c58;
+}
+
 .app-container {
     display: flex;
     justify-content: center;
     min-height: 100vh;
-    background-color: #fff8f2;
+    background-color: var(--white);
 }
 
 .todo-app {
     height: 600px;
     width: 400px;
     margin: 150px 0;
-    padding: 40px 20px 60px 20px;
+    padding: 60px;
     background-color: #ffffff;
     box-shadow: 0px 0px 30px 0 #e2dcd7;
 }
@@ -25,6 +36,22 @@ header {
     align-items: center;
 }
 
+.date-day {
+    font-size: var(--xlFont);
+    margin-right: 8px;
+}
+
 .date-month-year > span {
     display: block;
+    font-size: 11px;
+}
+
+.date-month-year > span:last-of-type {
+    font-weight: 300;
+    margin-top: 2px;
+}
+
+.date-day-name {
+    text-transform: uppercase;
+    font-size: 12px;
 }
