--- a/reset.css
+++ b/reset.css
@@ -34,6 +34,16 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
+button {
+    background: none;
+    border: none;
+    outline: none;
+}
+
+button:focus {
+    outline: none;
+}
+
 body {
 	line-height: 1;
 }
