--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 }
 
 .app-container {
+    position: relative;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -17,6 +18,7 @@ body {
 }
 
 .todo-app {
+    position: relative;
     height: 600px;
     width: 400px;
     margin: 150px 0;
@@ -54,4 +56,45 @@ header {
 .date-day-name {
     text-transform: uppercase;
     font-size: 12px;
+}
+
+.add-task-btn {
+    position: absolute;
+    bottom: -40px;
+    left: calc(50% - 40px);
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background-color: #83e483;
+    box-shadow: 2px 3px 15px 0 #aba9a8;
+}
+
+.add-task-btn > i {
+    color: #64b765;
+    font-size: 18px;
+}
+
+.modal-overlay {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #5454549e;
+}
+
+.modal-container {
+    position: absolute;
+    top: 20%;
+    left: calc(50% - 250px);
+    width: 500px;
+    height: 300px;
+    background-color: var(--white);
+    border-radius: 8px;
+}
+
+.hidden {
+    display: none;
 }
